--- a/submit.css
+++ b/submit.css
@@ -25,3 +25,11 @@ footer{
     padding-left: 20px;
     padding-left: 40px;
 }
+button{
+    color:pink;
+    background-color: rgb(27, 93, 27);
+    font-size: x-large;
+    width: 27%;
+    gap: 100px;
+    padding: 20px;
+  }
